--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@google/model-viewer": "^1.9.0",
     "three": "^0.133.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
